--- a/app.json
+++ b/app.json
@@ -4,8 +4,13 @@
     "web": {
       "bundler": "metro"
     },
+    "android": {
+      "googleServicesFile": "./google-services.json",
+      "package": "com.ahmad.wordleReactNative2"
+    },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-build-properties"
     ],
     "name": "worde-react-native",
     "slug": "worde-react-native"
